// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select renders Select correctly 1`] = `
<Component
  className=""
  onChange={[MockFunction]}
  palette={
    Object {
      "backgroundColors": Object {
        "background": "#FAFAFA",
        "black": "#000000",
        "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
        "darkgray1": "#777777",
        "darkgray2": "#454545",
        "darkgray3": "#424242",
        "gray1": "#E0E0E0",
        "gray2": "#E7E7E7",
        "grayAlpha": "rgba(0,0,0,0.17)",
        "medgray1": "#757575",
        "medgray2": "#888888",
        "primary1": "#4169E1",
        "primary2": "#212121",
        "primary3": "#00796B",
        "primary4": "#D32F2F",
        "secondary1": "#2E7D32",
        "secondary2": "#757575",
        "secondary3": "#673AB7",
        "secondary4": "#9C27B0",
        "secondary5": "#00796B",
        "secondary6": "#ECF0FC",
        "text": "#212121",
        "white": "#FFFFFF",
      },
      "borderColors": Object {
        "background": "#FAFAFA",
        "black": "#000000",
        "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
        "darkgray1": "#777777",
        "darkgray2": "#454545",
        "darkgray3": "#424242",
        "gray1": "#E0E0E0",
        "gray2": "#E7E7E7",
        "grayAlpha": "rgba(0,0,0,0.17)",
        "medgray1": "#757575",
        "medgray2": "#888888",
        "primary1": "#4169E1",
        "primary2": "#212121",
        "primary3": "#00796B",
        "primary4": "#D32F2F",
        "secondary1": "#2E7D32",
        "secondary2": "#757575",
        "secondary3": "#673AB7",
        "secondary4": "#9C27B0",
        "secondary5": "#00796B",
        "secondary6": "#ECF0FC",
        "text": "#212121",
        "white": "#FFFFFF",
      },
      "fontColors": Object {
        "background": "#FAFAFA",
        "black": "#000000",
        "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
        "darkgray1": "#777777",
        "darkgray2": "#454545",
        "darkgray3": "#424242",
        "gray1": "#E0E0E0",
        "gray2": "#E7E7E7",
        "grayAlpha": "rgba(0,0,0,0.17)",
        "medgray1": "#757575",
        "medgray2": "#888888",
        "primary1": "#4169E1",
        "primary2": "#212121",
        "primary3": "#00796B",
        "primary4": "#D32F2F",
        "secondary1": "#2E7D32",
        "secondary2": "#757575",
        "secondary3": "#673AB7",
        "secondary4": "#9C27B0",
        "secondary5": "#00796B",
        "secondary6": "#ECF0FC",
        "text": "#212121",
        "white": "#FFFFFF",
      },
    }
  }
  style={Object {}}
>
  <SelectContainer
    className=""
    style={Object {}}
  >
    <SelectPlaceholder
      className=""
      style={Object {}}
    >
      Select an option
    </SelectPlaceholder>
    <SelectFilter
      className=""
      style={Object {}}
    />
    <SelectIcon
      className=""
      style={Object {}}
    />
  </SelectContainer>
  <SelectOptionList
    className=""
    style={Object {}}
  >
    <SelectOption
      className=""
      style={Object {}}
      value="1"
    >
      Option 1
    </SelectOption>
    <SelectOption
      className=""
      style={Object {}}
      value="2"
    >
      Option 2
    </SelectOption>
    <SelectOption
      className=""
      style={Object {}}
      value="3"
    >
      Option 3
    </SelectOption>
    <SelectOption
      className=""
      style={Object {}}
      value="4"
    >
      Option 4
    </SelectOption>
    <SelectOption
      className=""
      style={Object {}}
      value="5"
    >
      Option 5
    </SelectOption>
  </SelectOptionList>
  <SelectOverlay
    className=""
    style={Object {}}
  />
</Component>
`;

exports[`Select should be rendered as a multi select if the selected prop is an array 1`] = `
<Component
  className=""
  dataLabel="select"
  onChange={[MockFunction]}
  palette={
    Object {
      "backgroundColors": Object {
        "background": "#FAFAFA",
        "black": "#000000",
        "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
        "darkgray1": "#777777",
        "darkgray2": "#454545",
        "darkgray3": "#424242",
        "gray1": "#E0E0E0",
        "gray2": "#E7E7E7",
        "grayAlpha": "rgba(0,0,0,0.17)",
        "medgray1": "#757575",
        "medgray2": "#888888",
        "primary1": "#4169E1",
        "primary2": "#212121",
        "primary3": "#00796B",
        "primary4": "#D32F2F",
        "secondary1": "#2E7D32",
        "secondary2": "#757575",
        "secondary3": "#673AB7",
        "secondary4": "#9C27B0",
        "secondary5": "#00796B",
        "secondary6": "#ECF0FC",
        "text": "#212121",
        "white": "#FFFFFF",
      },
      "borderColors": Object {
        "background": "#FAFAFA",
        "black": "#000000",
        "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
        "darkgray1": "#777777",
        "darkgray2": "#454545",
        "darkgray3": "#424242",
        "gray1": "#E0E0E0",
        "gray2": "#E7E7E7",
        "grayAlpha": "rgba(0,0,0,0.17)",
        "medgray1": "#757575",
        "medgray2": "#888888",
        "primary1": "#4169E1",
        "primary2": "#212121",
        "primary3": "#00796B",
        "primary4": "#D32F2F",
        "secondary1": "#2E7D32",
        "secondary2": "#757575",
        "secondary3": "#673AB7",
        "secondary4": "#9C27B0",
        "secondary5": "#00796B",
        "secondary6": "#ECF0FC",
        "text": "#212121",
        "white": "#FFFFFF",
      },
      "fontColors": Object {
        "background": "#FAFAFA",
        "black": "#000000",
        "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
        "darkgray1": "#777777",
        "darkgray2": "#454545",
        "darkgray3": "#424242",
        "gray1": "#E0E0E0",
        "gray2": "#E7E7E7",
        "grayAlpha": "rgba(0,0,0,0.17)",
        "medgray1": "#757575",
        "medgray2": "#888888",
        "primary1": "#4169E1",
        "primary2": "#212121",
        "primary3": "#00796B",
        "primary4": "#D32F2F",
        "secondary1": "#2E7D32",
        "secondary2": "#757575",
        "secondary3": "#673AB7",
        "secondary4": "#9C27B0",
        "secondary5": "#00796B",
        "secondary6": "#ECF0FC",
        "text": "#212121",
        "white": "#FFFFFF",
      },
    }
  }
  selectedValue={
    Array [
      "2",
      "4",
    ]
  }
  showList={true}
  style={Object {}}
>
  <SelectContainer
    className=""
    style={Object {}}
  >
    <SelectPlaceholder
      className=""
      style={Object {}}
    >
      Select an option
    </SelectPlaceholder>
    <SelectFilter
      className=""
      style={Object {}}
    />
    <SelectIcon
      className=""
      style={Object {}}
    />
  </SelectContainer>
  <SelectOptionList
    className=""
    style={Object {}}
  >
    <SelectOption
      className=""
      style={Object {}}
      value="1"
    >
      Option 1
    </SelectOption>
    <SelectOption
      className=""
      style={Object {}}
      value="2"
    >
      Option 2
    </SelectOption>
    <SelectOption
      className=""
      style={Object {}}
      value="3"
    >
      Option 3
    </SelectOption>
    <SelectOption
      className=""
      style={Object {}}
      value="4"
    >
      Option 4
    </SelectOption>
    <SelectOption
      className=""
      style={Object {}}
      value="5"
    >
      Option 5
    </SelectOption>
  </SelectOptionList>
  <SelectOverlay
    className=""
    style={Object {}}
  />
</Component>
`;
